# recipe-scrapper

./: Cargo.toml  README.md  analyzer_module.py  build.rs  skladniki.json
src/: cli.rs  config.rs  lib.rs  main.rs  model.rs  prelude.rs  products.rs
src/aniagotuje/: api.rs  mod.rs  web.rs
src/cakeit/: mod.rs
src/posypane/: mod.rs
