[package]
name = "recipe_scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
reqwest = { version = "0.11.18", features = ["json", "blocking"]}
scraper = "0.16.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.3.3", features = ["derive"] }
futures = "0.3.28"
log = { version = "0.4.18", features = ["release_max_level_info"] }
cpython = "0.7"